--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
+    background-color: #ac9c9c;
 }
 .dws-wrapper {
     position: absolute;
@@ -84,5 +85,11 @@ a.button {
     height: 40px;
     display: block;
     line-height: 40px;
+    text-align: center;
+}
+.social+a {
+    margin-top: 10px;
+    display: block;
+    font-size: 12px;
     text-align: center;
 }
